--- a/style.css
+++ b/style.css
@@ -33,10 +33,8 @@ body{
 }
 
 .wrapper{
-    display: flex;
-    flex-direction: column;
-    padding: 15px 0;
-    
+    padding: 10px 0;
+    width: 100%;
 }
 
 label{
@@ -44,7 +42,6 @@ label{
     color: var(--Grey-900--darker);
     font-family: 'Karla', sans-serif;
     font-weight: 500;
-    padding-bottom: 10px;
 }
 
 input{
@@ -52,6 +49,7 @@ input{
     height: 40px;
     border-radius: 0.5em;
     padding-left: 5px;
+    margin: 0.5em 0;
     border: 1px solid var(--Grey-500--medium-);
 }
 input:hover{
@@ -77,7 +75,6 @@ input[type='radio']{
     padding: 1em;
 }
 .label-radio:hover{
-    border: 1px solid var(--Green-600--medium);
     cursor: pointer;
 }
 .label-radio::before{
@@ -97,7 +94,10 @@ input[type='radio']:checked + .label-radio::before{
 input[type='radio']:checked + .label-radio{
     background-color: var(--Green-200--lighter);
 }
-
+.wrapper-textarea{
+    display: flex;
+    flex-direction: column;
+}
 textarea{
     height: 240px;
     border: 1px solid var(--Grey-500--medium-);
@@ -106,11 +106,6 @@ textarea{
     padding: 0.5em;
     font-family: 'Karla', sans-serif;
 }
-textarea:hover{
-    border: 1px solid var(--Green-600--medium);
-    cursor: pointer;
-}
-
 .wrapper-checkbox{
     display: inline-flex;
     align-items: center;
@@ -130,7 +125,58 @@ input[type='checkbox']{
     background-color: var(--Green-600--medium);
     color: var(--White);
     font-size: 1em;
+    width: 100%;
+    padding: 10px 0;
+    border: none;
+    border-radius: 0.5em;
 }
+.btn:hover{
+    background-color: var(--Grey-900--darker);
+}
+
+.modal-container{
+    background-color: var(--Grey-900--darker);
+    color: var(--White);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 0.68em;
+    width: 100%;
+    height: 80px;
+    padding: 0.8em;
+    font-family: 'Karla', sans-serif;
+    border-radius: 0.5em;
+    
+}
+.modal-wrapper{
+    display: flex;
+    align-items: center;
+}
+.modal__principal{
+    font-size: 0.9rem;
+    font-weight: 600;
+}
+
+.check{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 1.2em;
+    height: 1.2em;
+    margin-right: 5px;
+    border-radius: 50%;
+    border: 1px solid var(--White);
+}
+.fa-solid{
+    font-size: 0.7em;
+}
+
+.modal__text{
+    font-size: 0.8rem;
+    font-weight: 100;
+}
+
+
 .required{
     font-size: 0.8rem;
     color: var(--Red);
@@ -138,7 +184,43 @@ input[type='checkbox']{
     font-weight: 500;
     display: none;
 }
+/* .modal{
+    display: block;
+} */
+
+#myModal{
+    display: none;
+    position: fixed; /* Stay in place */
+    z-index: 2; /* Sit on top */
+    left: 50%;
+    top: 7%;
+    overflow: auto;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    opacity: 1;
+    transition: opacity 0.5s ease;
+}
+
+#myModal.hide {
+    opacity: 0;  /* Cuando se añade la clase 'hide', la opacidad baja a 0 */
+}
 
 
 .attribution { font-size: 11px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }
+
+@media (min-width:748px) {
+    body{
+        padding: 3% 30%;    
+    }
+
+    .name__container{
+        display: flex;
+        gap: 10px;
+    }
+
+    .modal-container{
+        width: 370px;
+    }
+}
